reading directory structure

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,9 @@
     <title>Angular mpdrei</title>
     <link rel="stylesheet" href="styles.css">
     <!-- 1. Load libraries -->
-    <!-- Polyfill(s) for older browsers -->
+    <!--&lt;!&ndash; Polyfill(s) for older browsers &ndash;&gt;-->
     <script src="node_modules/core-js/client/shim.min.js"></script>
+    <!--<script src="node_modules/fs-plus/lib/fs-plus.js"></script>-->
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
@@ -20,7 +21,7 @@
 </head>
 <body>
 <h1>Hiho</h1>
-<my-app>Loading ...</my-app>
+<mpdrei-app>Loading ...</mpdrei-app>
 </body>
 
 <!--<script>-->
